Modularised codebase, Integrated Docker Compose for Specmatic Contract and Resiliency Tests on Local and CI
